# GFZLOAD2SNX

./: .gitignore  README.md  download_snx.py  ftp_config.ini  gfzload2pkl.py  gfzload2pkl_tools.py  gfzload2snx.py  gfzload2snx_tools.py  gfzload2snx_workflow.py  ini  pyproject.toml  test.py
SAMPLE_NTLD_GFZ/: ABMF-97103M001.ecmwf.gfz13.ntal.cf  ABMF-97103M001.ecmwf.gfz13.ntal.cm  ABMF-97103M001.ecmwf.gfz13.slel.cf  ABMF-97103M001.ecmwf.gfz13.slel.cm  ABMF-97103M001.lsdm.gfz13.cwsl.cf  ABMF-97103M001.lsdm.gfz13.cwsl.cm  ABMF-97103M001.mpiom.gfz13.ntol.cf  ABMF-97103M001.mpiom.gfz13.ntol.cm
SOLUTION_PICKLES/: ABMF_AHOS_cf.PKL  ABMF_AHO_cf.PKL  ABMF_AOS_cf.PKL  ABMF_AO_cf.PKL  ABMF_A_cf.PKL  ABMF_H_cf.PKL  ABMF_O_cf.PKL  ABMF_S_cf.PKL  ABPO_AHOS_cf.PKL  ABPO_AHO_cf.PKL  ABPO_AOS_cf.PKL  ABPO_AO_cf.PKL  ABPO_A_cf.PKL  ABPO_H_cf.PKL  ABPO_O_cf.PKL  ABPO_S_cf.PKL  ADE1_AHOS_cf.PKL  ADE1_AHO_cf.PKL  ADE1_AOS_cf.PKL  ADE1_AO_cf.PKL  ADE1_A_cf.PKL  ADE1_H_cf.PKL  ADE1_O_cf.PKL  ADE1_S_cf.PKL  ADIS_AHOS_cf.PKL  ADIS_AHO_cf.PKL  ADIS_AOS_cf.PKL  ADIS_AO_cf.PKL  ADIS_A_cf.PKL  ADIS_H_cf.PKL  ADIS_O_cf.PKL  ADIS_S_cf.PKL  AIRA_AHOS_cf.PKL  AIRA_AHO_cf.PKL  AIRA_AOS_cf.PKL  AIRA_AO_cf.PKL  AIRA_A_cf.PKL  AIRA_H_cf.PKL  AIRA_O_cf.PKL  AIRA_S_cf.PKL  (+2882 more)
