[tool.poetry]
name = "gfzload2snx"
version = "0.1.0"
description = "This package manipulates GNSS SNX files and adds GFZ Non-Tidal Loadings to the estimates"
authors = ["ZajdelR <radoslaw.zajdel@upwr.edu.pl>"]
license = "MIT Licensee"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
logging = "^0.4.9.6"
geodezyx = "^4.4.3"
pandas = "^2.2.2"
numpy = "^2.0.1"
scipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
